# fastapi-skeleton

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/docker/: .dockerignore  .env.example  Makefile  build.yml  local.yml
{{ cookiecutter.project_slug }}/docker/images/: Dockerfile
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_snake_name }}/: main.py  periodic_tasks.py  services.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_snake_name }}/api/: routes.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_snake_name }}/core/: config.py  containers.py  events.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_snake_name }}/tests/: conftest.py  test_api.py
